<resources>
    <string name="app_name">Circuit Lens</string>
    <string name="title_activity_settings">Circuit Lens Settings</string>

    <!-- Strings related to Settings -->

    <string name="pref_header_general">General</string>
    <string name="pref_header_debug">Debug</string>

    <string name="pref_title_server">Server URI</string>
    <string name="pref_default_server">ws://127.0.0.1:8080/ws</string>

    <string name="pref_title_debug_test">Use test circuit</string>
    <string name="pref_title_debug_rotate">Rotate circuit</string>
    <string name="pref_title_debug_fps">Show OpenCV CameraView FPS</string>

    <string name="pref_title_conventional_current">Use conventional current</string>
    <string name="pref_title_show_voltage_color">Show voltage color</string>
    <string name="pref_title_show_current">Show current flow</string>
    <string name="pref_title_show_power_dissipation">Show power dissipation</string>
    <string name="pref_title_european_resistor">Use european resistor symbol</string>
</resources>
